--- a/css/Contactpaginastyle.css
+++ b/css/Contactpaginastyle.css
@@ -249,6 +249,7 @@ form button:hover {
     position: fixed; /* New */
     bottom: 1rem;
     right: 1rem;
+    color: black;
 }
 
 .social-icons img {
